Added some missing SP IDs, hopefully correctly.
git-svn-id: http://project.knowledgeforge.net/ukparse/svn/trunk@3229 9cc54934-f9f6-0310-8a8d-e8e977684441

--- a/parldata/cmpages/sp/written-answers/day-wa-00_wa0404.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-00_wa0404.htm
@@ -1084,8 +1084,6 @@ a:hover {color: #390580}
 
           <p align="CENTER">
 
-          <center>
-
             <table border cellspacing=1 cellpadding=7 width=55% align="left">
 
               <tr> 
@@ -1370,7 +1368,7 @@ a:hover {color: #390580}
 
             </table>
 
-          <p>&nbsp;</p></center>
+          <p>&nbsp;</p>
 
           <p></p>
 
@@ -3268,7 +3266,7 @@ a:hover {color: #390580}
 
     </table>
 
-</center></div>
+</div>
 
 </body>
 
