--- a/parldata/cmpages/sp/written-answers/day-wa-00_wa0626.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-00_wa0626.htm
@@ -3290,7 +3290,7 @@
               December 1999, the names of (a) the 18 individuals who fell within 
               category A and (b) the 26 individuals who fell within category B, 
               indicating in each case the nature of their public appointment.</font></p>
-            <p align="RIGHT"><strong><font size="2">(SIW-6338)</font></strong></p>
+            <p align="RIGHT"><strong><font size="2">(S1W-6338)</font></strong></p>
             <p><font size="2"><strong>Mr Jack McConnell: </strong>The information 
               requested is set out in the table below:</font></p>
             <table BORDER cellspacing=0 cellpadding=2 width=100%>
