--- a/parldata/cmpages/sp/written-answers/day-wa-01_wa0629.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-01_wa0629.htm
@@ -1021,7 +1021,7 @@
                 a risk register, presented formally to the Holyrood Progress Group, 
                 which currently contains 47 separate risks.</p>
               <p align="CENTER"></p>
-              <p><strong>Dorothy Grace-Elder (Glasgow) (SNP):</strong> To 
+              <p><strong>Dorothy-Grace Elder (Glasgow) (SNP):</strong> To 
                 ask the Presiding Officer what plans there are to increase the 
                 number of places available for people with disabilities in the 
                 public gallery of the new Parliament building.</p>
