--- a/parldata/cmpages/sp/written-answers/day-wa-02_wa0410.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-02_wa0410.htm
@@ -41,7 +41,7 @@
           <table width="99%" border="0" cellspacing="0" cellpadding="0" align="center">
             <tr> 
               <td><!-- #BeginEditable "Main Content" --> 
-              <p class="c3"><strong><a name="1"></a>Education</strong></p>
+              <p align="center"><strong><a name="1"></a>Education</strong></p>
               <p><strong>Michael Russell (South of Scotland) (SNP):</strong> To 
                 ask the Scottish Executive how effective it is for an issue to 
                 be included within the national priorities in education, given 
@@ -120,7 +120,7 @@
                 applies only to publicly-funded schools. The memorandum in no 
                 way questions the value of the priorities, in setting the agenda 
                 for improvement in Scottish education.</p>
-              <p class="c3"><strong><a name="2"></a>Prison Service</strong></p>
+              <p align="center"><strong><a name="2"></a>Prison Service</strong></p>
               <p><strong>Michael Matheson (Central Scotland) (SNP):</strong> To 
                 ask the Scottish Executive, further to the answer to question 
                 S1W-21184 by Mr Jim Wallace on 14 January 2002, whether the cost 
@@ -252,7 +252,7 @@
                 NPV of the public sector comparator was calculated on a pre- and 
                 post-risk basis, amounting to &#163;263 million and &#163;290 
                 million respectively.</p>
-              <p class="c3"><strong><a name="3"></a>Rail Network</strong></p>
+              <p align="center"><strong><a name="3"></a>Rail Network</strong></p>
               <p><strong>Murdo Fraser (Mid Scotland and Fife) (Con):</strong> 
                 To ask the Scottish Executive what transitional arrangements will 
                 be made for any (a) draft provisional orders to authorise railways 
@@ -277,7 +277,7 @@
                 applications, and none are anticipated before the Order in Council, 
                 under section 30 of the Scotland Act 1998, on the promotion and 
                 construction of railways comes into force.</p>
-              <p class="c3"><strong><a name="4"></a>Schools</strong></p>
+              <p align="center"><strong><a name="4"></a>Schools</strong></p>
               <p><strong>Mr Brian Monteith (Mid Scotland and Fife) (Con):</strong> 
                 To ask the Scottish Executive whether information on children 
                 outwith the state school system will be included in the Scottish 
@@ -300,7 +300,7 @@
                 information on children educated in independent schools will be 
                 transferred electronically as part of the September 2002 Scottish 
                 School Census.</p>
-              <p class="c3"><strong><a name="5"></a>Scottish Qualifications Authority</strong></p>
+              <p align="center"><strong><a name="5"></a>Scottish Qualifications Authority</strong></p>
               <p><strong>Michael Russell (South of Scotland) (SNP):</strong> To 
                 ask the Scottish Executive how much the Higher Still programme 
                 has cost the Scottish Qualifications Authority in each year since 
@@ -357,7 +357,7 @@
                 (SQA) budgeted expenditure in the current financial year is estimated 
                 at &#163;41.5 million. The SQA's budget for future years is currently 
                 under discussion.</p>
-              <p class="c3"><strong><a name="6"></a>Teachers</strong></p>
+              <p align="center"><strong><a name="6"></a>Teachers</strong></p>
               <p><strong>Christine Grahame (South of Scotland) (SNP):</strong> 
                 To ask the Scottish Executive whether it considers that an anomaly 
                 has arisen as a consequence of the implementation of the McCrone 
@@ -422,7 +422,7 @@
                 the implementation of the Teacher Induction Scheme in individual 
                 authorities, including consideration of any impact on existing 
                 probationers.</p>
-              <p class="c3"><strong><a name="7"></a>Water Authorities</strong></p>
+              <p align="center"><strong><a name="7"></a>Water Authorities</strong></p>
               <p><strong>Des McNulty (Clydebank and Milngavie) (Lab):</strong> 
                 To ask the Scottish Executive whether it will list and cost all 
                 projects being undertaken by (a) North of Scotland Water, (b) 
@@ -477,7 +477,7 @@
               <p><strong>Ross Finnie:</strong> The list of projects which are 
                 currently under way, and their costs, is available in the Parliament's 
                 Reference Centre (Bib. number 20557).</p>
-              <p class="c3"><strong><a name="8"></a>Youth Crime</strong></p>
+              <p align="center"><strong><a name="8"></a>Youth Crime</strong></p>
               <p><strong>Scott Barrie (Dunfermline West) (Lab):</strong> To ask 
                 the Scottish Executive when the report of the Feasibility Group 
                 on Youth Crime Pilots will be published.</p>
