--- a/parldata/cmpages/sp/written-answers/day-wa-02_wa0918.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-02_wa0918.htm
@@ -1089,6 +1089,14 @@
                 from its Business Growth Unit for post offices in urban deprived 
                 and rural areas and, if so, when and under what criteria such 
                 funds are available.</p>
+              <table cellspacing=0 border=0 cellpadding=5 width=100%>
+                <tr> 
+                  <td width="50%" valign="TOP">&nbsp;</td>
+                  <td width="50%" valign="TOP"> 
+                    <p align="RIGHT"><strong>(S1W-28938)</strong> 
+                  </td>
+                </tr>
+              </table>
               <p><strong>Iain Gray: </strong>I refer the member to the answer 
                 given to question S1W-28938 on 16 September 2002. All answers 
                 to written parliamentary questions are available on the Parliament&#146;s 
