--- a/parldata/cmpages/sp/written-answers/day-wa-02_wa1010.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-02_wa1010.htm
@@ -526,7 +526,7 @@
                 year since 1999-2000.</p>
               <table cellspacing=0 border=0 cellpadding=0 width=100%>
                 <tr> 
-                  <td width=284 valign="TOP"></td>
+                  <td width=284 valign="TOP">(S1W-29993)</td>
                   <td></td>
                 </tr>
               </table>
