--- a/parldata/cmpages/sp/written-answers/day-wa-03_wa0206.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-03_wa0206.htm
@@ -551,7 +551,7 @@
                 by UK companies whose production standards are outwith the directives.</p>
               <table cellspacing=0 border=0 cellpadding=0 width=100%>
                 <tr> 
-                  <td width=284 valign="TOP"></td>
+                  <td width=284 valign="TOP">(S1O-6393)</td>
                   <td></td>
                 </tr>
               </table>
