--- a/parldata/cmpages/sp/written-answers/day-wa-03_wa0227.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-03_wa0227.htm
@@ -833,9 +833,9 @@
               <p><strong>Mr Kenneth Macintosh (Eastwood) (Lab):</strong> To ask 
                 the Scottish Executive what action it proposes to take following 
                 the publication of figures from the 2001 Census on the number 
-                of Gaelic speakers.</p>
-              <p><em>The member has provided the following translation:</em></p>
-              <p><strong>Coinneach Mac an T&ograve;isich:</strong> A dh&#146; 
+                of Gaelic speakers.<BR>
+              <em>The member has provided the following translation:</em><BR>
+              <strong>Coinneach Mac an T&ograve;isich:</strong> A dh&#146; 
                 fhaighneachd do Riaghaltas na h-Alba d&egrave; na ceuman a tha 
                 iad am beachd a ghabhail as d&egrave;idh do na figearan bho chunntas-sluaigh 
                 2001 airson &agrave;ireamh luchd-labhairt na G&agrave;idhlig a 
