--- a/parldata/cmpages/sp/written-answers/day-wa-03_wa0922.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-03_wa0922.htm
@@ -777,6 +777,12 @@
                 Executive why projects under the Transforming Waste Scotland Programme 
                 are precluded from generating revenue that could sustain their 
                 viability.</p>
+              <table cellspacing="0" border="0" cellpadding="0" width="100%">
+                <tr> 
+                  <td width="50%" > <p>&#160;</p></td>
+                  <td width="50%" > <p style="text-align: right"> <strong>(S2W-2483)</strong></p></td>
+                </tr>
+              </table>
               <p><strong>Ross Finnie:</strong> This programme is funded by the 
                 New Opportunities Fund, one of the national lottery distribution 
                 bodies, and led by Forward Scotland. Given that the programme 
