--- a/parldata/cmpages/sp/written-answers/day-wa-04_wa0525.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-04_wa0525.htm
@@ -356,9 +356,9 @@
                 <P><strong>Ross Finnie: </strong>We made provision for expenditure of up to &pound;40 million on the 2003 decommissioning scheme. In the event, expenditure on decommissioning is expected to come to just over &pound;30.5 million.</P>
                 <P>Any funds allocated to decommissioning and not used for that purpose will be available for reallocation. Ministers will collectively consider that reallocation in the light of present and future spending priorities. An announcement on the use of all 2003-04 under spend will be made in due course by the Minister for Finance and Public Services.</P>
                 <P ALIGN="CENTER"><strong><a name="8"></a>Gaelic</strong></P>
-                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive whether it intends to give parents a legal right to choose Gaelic medium education through the Gaelic Language (Scotland) Bill.</P>
-                <P>&#9;<em>The member has provided the following Gaelic translation:</em></P>
-                <P>A dh' fhaighneachd de Riaghaltas na h-Alba a bheil e an d&ugrave;il coir laghail a thoirt do ph&agrave;rantan gus Foghlam tro Mheadhan na G&agrave;idhlig a thaghadh ann am Bile na G&agrave;idhlig (Alba).</P>
+                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive whether it intends to give parents a legal right to choose Gaelic medium education through the Gaelic Language (Scotland) Bill.<BR>
+                &#9;<em>The member has provided the following Gaelic translation:</em><BR>
+                A dh' fhaighneachd de Riaghaltas na h-Alba a bheil e an d&ugrave;il coir laghail a thoirt do ph&agrave;rantan gus Foghlam tro Mheadhan na G&agrave;idhlig a thaghadh ann am Bile na G&agrave;idhlig (Alba).</P>
                 <TABLE CELLSPACING=0 BORDER=0 CELLPADDING=2 WIDTH=100%>
                   <TR>
                     <TD WIDTH="50%" VALIGN="TOP">&nbsp;</TD>
@@ -366,9 +366,9 @@
                       <P ALIGN="RIGHT"><strong>(S2W-8224)</strong></TD>
                   </TR>
                 </TABLE>
-                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive whether it intends to develop opportunities for adults to learn Gaelic through the Gaelic Language (Scotland) Bill.</P>
-                <P>&#9;<em>The member has provided the following Gaelic translation:</em></P>
-                <P>A dh' fhaighneachd de Riaghaltas na h-Alba a bheil e an d&ugrave;il cothroman a leudachadh tro Bhile na G&agrave;idhlig (Alba) airson inbhich a tha airson G&agrave;idhlig ionnsachadh.</P>
+                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive whether it intends to develop opportunities for adults to learn Gaelic through the Gaelic Language (Scotland) Bill.<BR>
+                &#9;<em>The member has provided the following Gaelic translation:</em><BR>
+                A dh' fhaighneachd de Riaghaltas na h-Alba a bheil e an d&ugrave;il cothroman a leudachadh tro Bhile na G&agrave;idhlig (Alba) airson inbhich a tha airson G&agrave;idhlig ionnsachadh.</P>
                 <TABLE CELLSPACING=0 BORDER=0 CELLPADDING=2 WIDTH=100%>
                   <TR>
                     <TD WIDTH="50%" VALIGN="TOP">&nbsp;</TD>
@@ -376,9 +376,9 @@
                       <P ALIGN="RIGHT"><strong>(S2W-8225)</strong></TD>
                   </TR>
                 </TABLE>
-                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive how many responses it received during the consultation period on the Gaelic Language (Scotland) Bill.</P>
-                <P>&#9;<em>The member has provided the following Gaelic translation:</em></P>
-                <P>A dh' fhaighneachd de Riaghaltas na h-Alba c&ograve; mheud freagairt a fhuair e r&egrave; an &agrave;m co-chomhairleachaidh air Bile na G&agrave;idhlig (Alba).</P>
+                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive how many responses it received during the consultation period on the Gaelic Language (Scotland) Bill.<BR>
+                &#9;<em>The member has provided the following Gaelic translation:</em><BR>
+                A dh' fhaighneachd de Riaghaltas na h-Alba c&ograve; mheud freagairt a fhuair e r&egrave; an &agrave;m co-chomhairleachaidh air Bile na G&agrave;idhlig (Alba).</P>
                 <TABLE CELLSPACING=0 BORDER=0 CELLPADDING=2 WIDTH=100%>
                   <TR>
                     <TD WIDTH="50%" VALIGN="TOP">&nbsp;</TD>
@@ -386,9 +386,9 @@
                       <P ALIGN="RIGHT"><strong>(S2W-8227)</strong></TD>
                   </TR>
                 </TABLE>
-                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive what discussions it has had with representatives of the Gaelic Media Service whilst developing the final draft of the Gaelic Language (Scotland) Bill.</P>
-                <P>&#9;<em>The member has provided the following Gaelic translation:</em></P>
-                <P>A dh' fhaighneachd de Riaghaltas na h-Alba de na c&ograve;mhraidhean a bh' aige le riochdairean bho Sheirbheis nam Meadhanan G&agrave;idhlig is e a' d&egrave;anamh na dreachd mu dheireadh de Bhile na G&agrave;idhlig (Alba).</P>
+                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive what discussions it has had with representatives of the Gaelic Media Service whilst developing the final draft of the Gaelic Language (Scotland) Bill.<BR>
+                &#9;<em>The member has provided the following Gaelic translation:</em><BR>
+                A dh' fhaighneachd de Riaghaltas na h-Alba de na c&ograve;mhraidhean a bh' aige le riochdairean bho Sheirbheis nam Meadhanan G&agrave;idhlig is e a' d&egrave;anamh na dreachd mu dheireadh de Bhile na G&agrave;idhlig (Alba).</P>
                 <TABLE CELLSPACING=0 BORDER=0 CELLPADDING=2 WIDTH=100%>
                   <TR>
                     <TD WIDTH="50%" VALIGN="TOP">&nbsp;</TD>
@@ -396,9 +396,9 @@
                       <P ALIGN="RIGHT"><strong>(S2W-8229)</strong></TD>
                   </TR>
                 </TABLE>
-                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive when it will publish the Gaelic Language (Scotland) Bill and whether it intends the Bill to be approved by the Parliament by the time of the National Mod of 2004.</P>
-                <P>&#9;<em>The member has provided the following Gaelic translation:</em></P>
-                <P>A dh' fhaighneachd de Riaghaltas na h-Alba cuine a dh' fhoillsicheas e Bile na G&agrave;idhlig (Alba) agus a dh' fhaighneachd a bheil e airson is gun aontaich a' Ph&agrave;rlamaid ris a' bhile ron Mh&ograve;d N&agrave;iseanta R&igrave;oghail 2004.</P>
+                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive when it will publish the Gaelic Language (Scotland) Bill and whether it intends the Bill to be approved by the Parliament by the time of the National Mod of 2004.<BR>
+                &#9;<em>The member has provided the following Gaelic translation:</em><BR>
+                A dh' fhaighneachd de Riaghaltas na h-Alba cuine a dh' fhoillsicheas e Bile na G&agrave;idhlig (Alba) agus a dh' fhaighneachd a bheil e airson is gun aontaich a' Ph&agrave;rlamaid ris a' bhile ron Mh&ograve;d N&agrave;iseanta R&igrave;oghail 2004.</P>
                 <TABLE CELLSPACING=0 BORDER=0 CELLPADDING=2 WIDTH=100%>
                   <TR>
                     <TD WIDTH="50%" VALIGN="TOP">&nbsp;</TD>
@@ -406,12 +406,19 @@
                       <P ALIGN="RIGHT"><strong>(S2W-8230)</strong></TD>
                   </TR>
                 </TABLE>
-                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive what steps it is taking to involve the Council of Europe monitoring team that reported on the Scottish Executive's progress with regard to the European Charter for Regional and Minority Languages in the development of the final draft of the Gaelic Language (Scotland) Bill.</P>
-                <P>&#9;<em>The member has provided the following Gaelic translation:</em></P>
-                <P>A dh' fhaighneachd de Riaghaltas na h-Alba d&egrave; na ceumannan a tha e a' gabhail gus cothrom a thoirt don sgioba sgr&ugrave;daidh aig Comhairle na h-E&ograve;rpa a rinn aithris air adhartas Riaghaltas na h-Alba a thaobh Cairt E&ograve;rpach nam Mion-ch&agrave;nain gus p&agrave;irt a ghabhail ann a bhith a' d&egrave;anamh na dreachd mu dheireadh de Bhile na G&agrave;idhlig (Alba).</P>
-                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive what discussions it has had with representatives of BBC Scotland whilst developing the final draft of the Gaelic Language (Scotland) Bill.</P>
-                <P>&#9;<em>The member has provided the following Gaelic translation:</em></P>
-                <P>A dh' fhaighneachd de Riaghaltas na h-Alba de na c&ograve;mhraidhean a bh' aige le riochdairean bho BhBC Alba is e a' d&egrave;anamh na dreachd mu dheireadh de Bhile na G&agrave;idhlig (Alba).</P>
+                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive what steps it is taking to involve the Council of Europe monitoring team that reported on the Scottish Executive's progress with regard to the European Charter for Regional and Minority Languages in the development of the final draft of the Gaelic Language (Scotland) Bill.<BR>
+                &#9;<em>The member has provided the following Gaelic translation:</em><BR>
+                A dh' fhaighneachd de Riaghaltas na h-Alba d&egrave; na ceumannan a tha e a' gabhail gus cothrom a thoirt don sgioba sgr&ugrave;daidh aig Comhairle na h-E&ograve;rpa a rinn aithris air adhartas Riaghaltas na h-Alba a thaobh Cairt E&ograve;rpach nam Mion-ch&agrave;nain gus p&agrave;irt a ghabhail ann a bhith a' d&egrave;anamh na dreachd mu dheireadh de Bhile na G&agrave;idhlig (Alba).</P>
+                <TABLE CELLSPACING=0 BORDER=0 CELLPADDING=2 WIDTH=100%>
+                  <TR>
+                    <TD WIDTH="50%" VALIGN="TOP">&nbsp;</TD>
+                    <TD WIDTH="50%" VALIGN="TOP">
+                      <P ALIGN="RIGHT"><strong>(S2W-8231)</strong></TD>
+                  </TR>
+                </TABLE>
+                <P><strong>Tricia Marwick (Mid Scotland and Fife) (SNP):</strong> To ask the Scottish Executive what discussions it has had with representatives of BBC Scotland whilst developing the final draft of the Gaelic Language (Scotland) Bill.<BR>
+                &#9;<em>The member has provided the following Gaelic translation:</em><BR>
+                A dh' fhaighneachd de Riaghaltas na h-Alba de na c&ograve;mhraidhean a bh' aige le riochdairean bho BhBC Alba is e a' d&egrave;anamh na dreachd mu dheireadh de Bhile na G&agrave;idhlig (Alba).</P>
                 <TABLE CELLSPACING=0 BORDER=0 CELLPADDING=2 WIDTH=100%>
                   <TR>
                     <TD WIDTH="50%" VALIGN="TOP">&nbsp;</TD>
