--- a/parldata/cmpages/sp/written-answers/day-wa-05_wa0120.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-05_wa0120.htm
@@ -314,7 +314,7 @@
               <td width="50%" valign="top"><p align="right"><strong>(S2W-13046)</strong></p></td>
             </tr>
           </table>
-          <p><strong>Alan Wilson: </strong>The Executive has commissioned a research study which is currently developing projections of future energy consumption in Scotland. The report will be published later this year.</p>
+          <p><strong>Allan Wilson: </strong>The Executive has commissioned a research study which is currently developing projections of future energy consumption in Scotland. The report will be published later this year.</p>
           <p align="center"><strong>Environment<a name="9" id="9"></a></strong></p>
           <p><strong>Eleanor Scott (Highlands and Islands) (Green):</strong> To ask the Scottish Executive what action is being taken to identify and fill any gaps in the current understanding of the role of Scottish peatlands in sequestering carbon implicated in climate change.</p>
           <table cellspacing="0" border="0" cellpadding="2" width="100%">
