--- a/parldata/cmpages/sp/written-answers/day-wa-05_wa0428.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-05_wa0428.htm
@@ -894,7 +894,7 @@
               <td width="50%" valign="top"><p align="right"><strong>(S2W-16042)</strong></p></td>
             </tr>
           </table>
-          <p><strong>Colin Boyd Q.C: </strong>The information requested is not readily available in the format required and can only be obtained at disproportionate cost.</p>
+          <p><strong>Colin Boyd QC: </strong>The information requested is not readily available in the format required and can only be obtained at disproportionate cost.</p>
           <p align="center"><strong><a name="12" id="12"></a>Fisheries</strong></p>
           <p><strong>Richard Lochhead (North East Scotland) (SNP):</strong> To ask the Scottish Executive what its fisheries-related priorities are for the United Kingdom&rsquo;s forthcoming presidency of the European Union and how it intends to pursue them.</p>
           <table cellspacing="0" border="0" cellpadding="2" width="100%">
