--- a/parldata/cmpages/sp/written-answers/day-wa-05_wa1121.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-05_wa1121.htm
@@ -368,7 +368,7 @@
               <td width="50%" valign="DEFAULT"><p align="right"><strong>(S2W-20571)</strong></p></td>
             </tr>
           </table>
-          <p><strong>Peter Peacock: The Scottish Executive invested &pound;12 million for out of school hours learning this year.</strong></p>
+          <p><strong>Peter Peacock:</strong> The Scottish Executive invested &pound;12 million for out of school hours learning this year.</p>
           <p>Funding for study support and out of school hours learning is currently made available to authorities through the National Priorities Action Fund (NPAF) and will continue to be made available as a component of the gross allocation of the NPAF for 2006-07 and 2007-08.</p>
           <p><strong>Mr Adam Ingram (South of Scotland) (SNP):</strong> To ask the Scottish Executive whether it accepts the recommendations of the SCRE Centre evaluation of the Study Support Programme and out of school hours learning (OSHL) in schools.</p>
           <table cellspacing="0" border="0" cellpadding="2" width="100%">
