--- a/parldata/cmpages/sp/written-answers/day-wa-07_wa0119.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-07_wa0119.htm
@@ -2756,6 +2756,12 @@
             </tr>
           </table>
           <p><strong>Stewart Stevenson (Banff and Buchan) (SNP):</strong> To ask the Scottish Executive what the residence-based claimant count unemployment rate was for each council ward in East Lothian in each year since 1999.</p>
+          <table cellspacing="0" border="0" cellpadding="2" width="100%">
+            <tr>
+              <td width="50%" valign="top">&nbsp;</td>
+              <td width="50%" valign="top"><p align="right"><strong>(S2W-30947)</strong></p></td>
+            </tr>
+          </table>
           <p><strong>Stewart Stevenson (Banff and Buchan) (SNP):</strong> To ask the Scottish Executive what the residence-based claimant count unemployment rate was for each council ward in East Renfrewshire in each year since 1999.</p>
           <table cellspacing="0" border="0" cellpadding="2" width="100%">
             <tr>
