--- a/parldata/cmpages/sp/written-answers/day-wa-07_wa0327.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-07_wa0327.htm
@@ -1110,7 +1110,7 @@
             </tr>
           </table>
           <p><strong>Mr Andy Kerr: </strong>The information requested is not held centrally.</p>
-          <p> <strong>.Ms Maureen Watt (North East Scotland) (SNP):</strong> To ask the Scottish Executive how many midwives were employed by each NHS board in each year since 1999, showing year-on-year percentage changes.</p>
+          <p> <strong>Ms Maureen Watt (North East Scotland) (SNP):</strong> To ask the Scottish Executive how many midwives were employed by each NHS board in each year since 1999, showing year-on-year percentage changes.</p>
           <table cellspacing="0" border="0" cellpadding="2" width="100%">
             <tr>
               <td width="50%" valign="top">&nbsp;</td>
