--- a/parldata/cmpages/sp/written-answers/day-wa-07_wa0716.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-07_wa0716.htm
@@ -653,7 +653,7 @@
           <p><strong>Kenny MacAskill: </strong>The Scottish Parliament approved the first draft guidance for Licensing Boards prepared under section 142 of the Licensing (Scotland) Act 2005 on 7 March 2007. The guidance was issued to boards on 4 April 2007 and is available at:<br />
             <a href="http://www.scotland.gov.uk/Resource/Doc/175487/0049459.pdf" target="_blank">http://www.scotland.gov.uk/Resource/Doc/175487/0049459.pdf</a>.</p>
           <p>Revised guidance will be prepared later in the year to take account of the various Regulations being made under the act.</p>
-          <p><strong>Hugh O&rsquo;Donnell (Central Scotland) (LD):</strong> To ask the Scottish Executive whether it is considering raising the age at which alcohol can be bought from off-sales premises, including supermarkets.</p>
+          <p><strong>Hugh O'Donnell (Central Scotland) (LD):</strong> To ask the Scottish Executive whether it is considering raising the age at which alcohol can be bought from off-sales premises, including supermarkets.</p>
           <table cellspacing="0" border="0" cellpadding="2" width="100%">
             <tr>
               <td width="50%" valign="top">&nbsp;</td>
