--- a/parldata/cmpages/sp/written-answers/day-wa-07_wa0912.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-07_wa0912.htm
@@ -740,7 +740,7 @@
               <td width="50%" valign="top"><p align="right"><strong>(S3W-3994)</strong></p></td>
             </tr>
           </table>
-          <p><strong>John Swinney: As I said during the Approach to Government debate on 24 May 2007 </strong>any review of government structures would not be predicated on compulsory job losses. It is likely that there will be changes in what people do in their jobs to focus on delivering quality services.</p>
+          <p><strong>John Swinney:</strong> As I said during the Approach to Government debate on 24 May 2007 any review of government structures would not be predicated on compulsory job losses. It is likely that there will be changes in what people do in their jobs to focus on delivering quality services.</p>
           <p><strong>Tom McCabe (Hamilton South) (Lab):</strong> To ask the Scottish Executive what savings it anticipates will be made as a result of streamlining measures which are either planned or have already been undertaken since May 2007.</p>
           <table cellspacing="0" border="0" cellpadding="2" width="100%">
             <tr>
