--- a/parldata/cmpages/sp/written-answers/day-wa-07_wa1127.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-07_wa1127.htm
@@ -152,6 +152,12 @@
           <p><strong>Stewart Maxwell: </strong>I have asked James Hynd, Acting Chief Executive of Communities Scotland to respond. His response is as follows:</p>
           <p>Glasgow Housing Association has completed all its installations under the Scottish Government Central Heating Programme.</p>
           <p><strong>Elizabeth Smith (Mid Scotland and Fife) (Con):</strong> To ask the Scottish Executive how much has been spent on houses and cottages on private estates under the central heating programme in each year since 1999.</p>
+          <table cellspacing="0" border="0" cellpadding="2" width="100%">
+            <tr>
+              <td width="50%" valign="top">&nbsp;</td>
+              <td width="50%" valign="top"><p align="right"><strong>(S3W-6702)</strong></p></td>
+            </tr>
+          </table>
           <p><strong>Elizabeth Smith (Mid Scotland and Fife) (Con):</strong> To ask the Scottish Executive how many houses and cottages on private estates have received new heating systems under the central heating programme in each year since 1999.</p>
           <table cellspacing="0" border="0" cellpadding="2" width="100%">
             <tr>
