--- a/parldata/cmpages/sp/written-answers/day-wa-99_wa0624.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-99_wa0624.htm
@@ -82,7 +82,7 @@ a:hover {color: #390580}
             Scotland and Fife) (Con):</strong> To ask the Scottish Executive whether 
             it intends to include Jordanhill School in its plans to return all 
             directly funded schools to local authority control.</font></p>
-          <p><font face="Arial" size="2"><strong>&nbsp;</strong></font></p>
+          <p><font face="Arial" size="2"><strong>(S1O-122)</strong></font></p>
           <p align="LEFT"> <font face="Arial" size="2"><strong>Peter Peacock: </strong>Jordanhill 
             School has never been under local authority management, so the question 
             of returning it to the local authority does not arise.</font></p>
