--- a/parldata/cmpages/sp/written-answers/day-wa-99_wa1130.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-99_wa1130.htm
@@ -319,9 +319,9 @@ a:hover {color: #390580}
             medical and surgical patients as indicated in figures produced by 
             the Information and Statistics Division of the Common Services Agency 
             and whether the number of beds will meet with demand.</font></p>
-          <ol>
+          <p align="right">
             <font face="Arial, Helvetica, sans-serif" size="2"><strong>(S1W-1999)</strong></font> 
-          </ol>
+          </p>
           <p><font face="Arial, Helvetica, sans-serif" size="2"><strong>Susan Deacon:</strong> 
             The reduction in the number of acute and surgical beds over the years 
             reflects the substantial advances in clinical practices and improvements 
