--- a/parldata/cmpages/sp/written-answers/day-wa-05_wa1209.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-05_wa1209.htm
@@ -1089,6 +1089,12 @@
           <p>The Health Promoting Schools Unit, in conjunction with HMIE and NHS Health Scotland, have an important role in spreading good practice on issues such as minimising stigma via the Hungry for Success coordinators network. 90% of local authorities now operate cashless systems in at least some of their schools.</p>
           
           <p><strong>Frances Curran (West of Scotland) (SSP):</strong> To ask the Scottish Executive what assessment it has carried out of the proportion of primary school children who bring packed lunches to school, rather than choosing a school meal, and what plans it has to make school meals more attractive and more accessible to those pupils.</p>
+          <table cellspacing="0" border="0" cellpadding="7" width="100%">
+            <tr>
+              <td width="50%" valign="top">&nbsp;</td>
+              <td width="50%" valign="top"><p align="right"><strong>(S2W-21182)</strong></p></td>
+            </tr>
+          </table>
           <p><strong>Frances Curran (West of Scotland) (SSP):</strong> To ask the Scottish Executive what measures it will take to ensure that all schools evaluate their school meals and food provision rigorously and regularly, in light of the findings of HM Inspectorate of Education&rsquo;s progress report, Monitoring the Implementation of Hungry for Success: A Whole School Approach to School Meals in Scotland.</p>
           <table cellspacing="0" border="0" cellpadding="7" width="100%">
             <tr>
