--- a/parldata/cmpages/sp/written-answers/day-wa-07_wa0605.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-07_wa0605.htm
@@ -256,7 +256,7 @@
             </tr>
           </table>
           
-          <p><strong>Shona Robison: Scottish Intercollegiate Guidelines Network</strong> (SIGN) <em>Guideline 62 on Prophylaxis of Venous Thromboembolism</em> (VTE) states that all patients admitted to hospital for major trauma, major surgery or acute medical illness should be assessed individually for risk of VTE. This guideline, which is about to be reviewed, is followed in surgical units throughout Scotland.</p>
+          <p><strong>Shona Robison:</strong> Scottish Intercollegiate Guidelines Network (SIGN) <em>Guideline 62 on Prophylaxis of Venous Thromboembolism</em> (VTE) states that all patients admitted to hospital for major trauma, major surgery or acute medical illness should be assessed individually for risk of VTE. This guideline, which is about to be reviewed, is followed in surgical units throughout Scotland.</p>
           
           <p>Other Guidelines relevant to VTE are <em>SIGN 89</em> (<em>Diagnosis and management of peripheral arterial disease, October 2006</em>) and <em>SIGN 36</em> (<em>Anti Thrombotic Therapy, March 1999</em>), which is currently under review. Prevention of VTE is also covered in guidelines such as that on <em>Prevention and Management of Hip Fracture in Older People</em> (January 2002).</p>
           <p align="center"><strong><a name="11" id="11"></a>Housing</strong></p>
