--- a/parldata/cmpages/sp/written-answers/day-wa-00_wa0726.htm
+++ b/parldata/cmpages/sp/written-answers/day-wa-00_wa0726.htm
@@ -433,7 +433,7 @@
               level of funding provided for General Practice Undergraduate Teaching 
               is for negotiation between the relevant health board, NHS Trusts 
               and university.</font></p>
-            <p align="CENTER"><strong><font face="Arial" size="2"><a name="7823">#</a>Occupational 
+            <p align="CENTER"><strong><font face="Arial" size="2"><a name="7823"></a>Occupational 
               Health</font></strong></p>
             <p align="left"><font face="Arial" size="2"><strong>Mr Andrew Welsh 
               (Angus) (SNP):</strong> To ask the Scottish Executive what staffing levels 
